routes dan fixed controller tahap 2

--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,13 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "route":[
+            "@php artisan key:generate",
+            "@php artisan cache:clear",
+            "@php artisan config:clear",
+            "@php artisan route:clear",
+            "@php artisan optimize"
         ]
     },
     "extra": {
